# ostrinkets

./: .editorconfig  .gitignore  CMakeLists.txt  Main.cpp  RandFile.sln  RandFile.vcxproj  ReadMe.md  fstrinkets.cppcheck  ostrinkets.cppcheck  rand_file.cpp  readme.md
.github/workflows/: ci.yml  clang.yml  cppcheck.yml  gcc.yml  msvc.yml
bit_flipper/: CMakeLists.txt  main.cpp  posix.cpp  resource.hpp  win32.cpp
byte_printer/: CMakeLists.txt  main.cpp
close_window/: CMakeLists.txt  close_window.cpp  main.cpp  window_manager.hpp  window_manager_win32.cpp  window_manager_x11.cpp
dir_clean/: CMakeLists.txt  dir_clean.cpp
drive_info/: CMakeLists.txt  drive_info.hpp  drive_info_bsd.cpp  drive_info_linux.cpp  drive_info_win.cpp  drive_info_win32.cpp  main.cpp
entropy_calc/: CMakeLists.txt  entropy_calc.cpp
file_info/: CMakeLists.txt  file_info.hpp  file_info_posix.cpp  file_info_win.cpp  file_info_win32.cpp  main.cpp
file_replace/: CMakeLists.txt  file_replace.cpp  main.cpp  memory_mapped_file.hpp  memory_mapped_file_posix.cpp  memory_mapped_file_win32.cpp
file_search/: CMakeLists.txt  main.cpp
file_watcher/: CMakeLists.txt  file_watcher.hpp  file_watcher_bsd.cpp  file_watcher_linux.cpp  file_watcher_posix.cpp  file_watcher_win32.cpp  main.cpp
file_watcher_simple/: CMakeLists.txt  file_watcher_simple.cpp  main.cpp
lorem_ipsum/: CMakeLists.txt  Kbuild  lorem_ipsum.c
mem_search/: CMakeLists.txt  linux.cpp  main.cpp  mem_search.hpp  posix.cpp  win32.cpp
perus64/: CMakeLists.txt  perus64_decode.cpp  perus64_encode.cpp
process_exit/: CMakeLists.txt  main.cpp  process.hpp  process_posix.cpp  process_win32.cpp
rand_file/: CMakeLists.txt  rand_file.cpp
record_sound/: CMakeLists.txt  main.cpp  record_sound.hpp  record_sound_win32.cpp
serial_reader/: CMakeLists.txt  main.cpp  serial_reader.hpp  serial_reader_posix.cpp  serial_reader_win32.cpp
sloth_copy/: CMakeLists.txt  sloth_copy.cpp
